--- a/client/chat.html
+++ b/client/chat.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="img/favicon.png" type="image/png" />
     </head>
     <body>
-		<div id="vue-container"></div>
+		<div id="vue-container" style = "border: 1px black solid"></div>
         <a href="javascript:void(0)" id="sign-out-btn">Déconnexion</a>
 
         <div>
