--- a/client/chat.html
+++ b/client/chat.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Chat</title>
         <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="css/chat.css">
         <script src="dist/chat.js"></script>
         <link rel="icon" href="img/favicon.png" type="image/png" />
     </head>
