changed much things

--- a/client/chat.html
+++ b/client/chat.html
@@ -14,7 +14,8 @@
             <div class = "arrow right"></div>
             <div class = "arrow forward"></div>
             <div class = "arrow left"></div>
-            <div class = "room-description">
+            <div class = "room-text">
+                <div class = "room-description"></div>
                 <div class = "alert-message"></div>
             </div>
             <div id="audio-container">
@@ -32,8 +33,7 @@
             
 		    <div id="vue-container">
                 <h2>Chat :</h2>
-                <h3>You are:  </h3>
-                <h3 class = "user"></h3>
+                <h3>You are:  <span class = "user"></span></h3>
             </div>
             
 
