changed picture and register

--- a/client/chat.html
+++ b/client/chat.html
@@ -11,13 +11,11 @@
     </head>
     <body>
         <div class = "game">
+            <div id="sign-out-btn" >Sortir du magasin</div>
             <div class = "arrow right"></div>
             <div class = "arrow forward"></div>
             <div class = "arrow left"></div>
-            <div class = "room-text">
-                <div class = "room-description"></div>
-                <div class = "alert-message"></div>
-            </div>
+            <div class = "room-description"></div>
             <div id="audio-container">
                 <audio id="background-music">
                     <source src="music/theme_song.mp3" type="audio/mp3">
@@ -29,7 +27,7 @@
         <div class = "chat">
             <h2>Staff :</h2>
             <div class = "members"></div>
-            <a href="javascript:void(0)" id="sign-out-btn">Sortir du magasin</a>
+            
             
 		    <div id="vue-container">
                 <h2>Chat :</h2>
