--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class = "other_websites">
                     <div>
-                        <a href = "https://th.bing.com/th/id/OIG..1dCrGA.3cwkPYVy3xSe?w=1024&h=1024&rs=1&pid=ImgDetMain">Forgot password?</a>
+                        <a href = "#" class = "forgot">Forgot password?</a>
                     </div>
                     <div>
                         <a href = "register.html">Register!</a>
